tests/ui/parser/unicode-control-codepoints.stderr
error[E0658]: mixed utf8 b"" and br"" literals are experimental
  --> $DIR/unicode-control-codepoints.rs:6:22
   |
LL |     println!("{:?}", b"us\u{202B}e\u{202A}r");
   |                      ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #116907 <https://github.com/rust-lang/rust/issues/116907> for more information
   = help: add `#![feature(mixed_utf8_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: mixed utf8 b"" and br"" literals are experimental
  --> $DIR/unicode-control-codepoints.rs:15:22
   |
LL |     println!("{:?}", b"/* } if isAdmin  begin admins only ");
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #116907 <https://github.com/rust-lang/rust/issues/116907> for more information
   = help: add `#![feature(mixed_utf8_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: mixed utf8 b"" and br"" literals are experimental
  --> $DIR/unicode-control-codepoints.rs:17:22
   |
LL |     println!("{:?}", br##"/* } if isAdmin  begin admins only "##);
   |                      ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #116907 <https://github.com/rust-lang/rust/issues/116907> for more information
   = help: add `#![feature(mixed_utf8_literals)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: unicode codepoint changing visible direction of text present in comment
  --> $DIR/unicode-control-codepoints.rs:2:5
   |
LL |     // if access_level != "user" { // Check if admin
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^--^^^^^^^^^^^^^^^^^^^^^
   |     |                        ||
   |     |                        |'\u{202a}'
   |     |                        '\u{202b}'
   |     this comment contains invisible unicode text flow control codepoints
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = note: `#[deny(text_direction_codepoint_in_comment)]` on by default
   = help: if their presence wasn't intentional, you can remove them

error: unicode codepoint changing visible direction of text present in comment
  --> $DIR/unicode-control-codepoints.rs:23:1
   |
LL | //"/* } if isAdmin  begin admins only */"
   | ^^^^^-^^-^^^^^^^^^--^^^^^^^^^^^^^^^^^^^^^
   | |    |  |         ||
   | |    |  |         |'\u{2066}'
   | |    |  |         '\u{2069}'
   | |    |  '\u{2066}'
   | |    '\u{202e}'
   | this comment contains invisible unicode text flow control codepoints
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = help: if their presence wasn't intentional, you can remove them

error: unicode codepoint changing visible direction of text present in literal
  --> $DIR/unicode-control-codepoints.rs:10:22
   |
LL |     println!("{:?}", "/* } if isAdmin  begin admins only ");
   |                      ^^^-^^-^^^^^^^^^--^^^^^^^^^^^^^^^^^^^
   |                      |  |  |         ||
   |                      |  |  |         |'\u{2066}'
   |                      |  |  |         '\u{2069}'
   |                      |  |  '\u{2066}'
   |                      |  '\u{202e}'
   |                      this literal contains invisible unicode text flow control codepoints
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = note: `#[deny(text_direction_codepoint_in_literal)]` on by default
   = help: if their presence wasn't intentional, you can remove them
help: if you want to keep them but make them visible in your source code, you can escape them
   |
LL |     println!("{:?}", "/*\u{202e} } \u{2066}if isAdmin\u{2069} \u{2066} begin admins only ");
   |                         ~~~~~~~~   ~~~~~~~~          ~~~~~~~~ ~~~~~~~~

error: unicode codepoint changing visible direction of text present in literal
  --> $DIR/unicode-control-codepoints.rs:13:22
   |
LL |     println!("{:?}", r##"/* } if isAdmin  begin admins only "##);
   |                      ^^^^^^-^^-^^^^^^^^^--^^^^^^^^^^^^^^^^^^^^^
   |                      |     |  |         ||
   |                      |     |  |         |'\u{2066}'
   |                      |     |  |         '\u{2069}'
   |                      |     |  '\u{2066}'
   |                      |     '\u{202e}'
   |                      this literal contains invisible unicode text flow control codepoints
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = help: if their presence wasn't intentional, you can remove them
help: if you want to keep them but make them visible in your source code, you can escape them
   |
LL |     println!("{:?}", r##"/*\u{202e} } \u{2066}if isAdmin\u{2069} \u{2066} begin admins only "##);
   |                            ~~~~~~~~   ~~~~~~~~          ~~~~~~~~ ~~~~~~~~

error: unicode codepoint changing visible direction of text present in literal
  --> $DIR/unicode-control-codepoints.rs:19:22
   |
LL |     println!("{:?}", '');
   |                      ^-
   |                      ||
   |                      |'\u{202e}'
   |                      this literal contains an invisible unicode text flow control codepoint
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = help: if their presence wasn't intentional, you can remove them
help: if you want to keep them but make them visible in your source code, you can escape them
   |
LL |     println!("{:?}", '\u{202e}');
   |                       ~~~~~~~~

error: unicode codepoint changing visible direction of text present in doc comment
  --> $DIR/unicode-control-codepoints.rs:26:1
   |
LL | /**  ''); */fn foo() {}
   | ^^^^^^^^^^^^ this doc comment contains an invisible unicode text flow control codepoint
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = note: if their presence wasn't intentional, you can remove them
   = note: if you want to keep them but make them visible in your source code, you can escape them: '\u{202e}'

error: unicode codepoint changing visible direction of text present in doc comment
  --> $DIR/unicode-control-codepoints.rs:29:1
   |
LL | / /**
LL | |  *
LL | |  *  ''); */fn bar() {}
   | |___________^ this doc comment contains an invisible unicode text flow control codepoint
   |
   = note: these kind of unicode codepoints change the way text flows on applications that support them, but can cause confusion because they change the order of characters on the screen
   = note: if their presence wasn't intentional, you can remove them
   = note: if you want to keep them but make them visible in your source code, you can escape them: '\u{202e}'

error: aborting due to 10 previous errors

For more information about this error, try `rustc --explain E0658`.
